# switchboard-graph-runner

./: .gitignore  App.tsx  README.md  app.json  engine.json  package-lock.json  package.json
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/java/com/switchboardgraphrunner/: MainActivity.kt  MainApplication.kt
android/app/src/main/jni/: CMakeLists.txt  OnLoad.cpp
android/app/src/main/res/values/: strings.xml
ios/: Podfile
ios/Switchboard-AppIcon.icon/: icon.json
ios/SwitchboardGraphRunner/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard  NativeSwitchboardModuleProvider.h  NativeSwitchboardModuleProvider.mm
ios/SwitchboardGraphRunner.xcodeproj/: project.pbxproj
ios/SwitchboardGraphRunner.xcodeproj/xcshareddata/xcschemes/: SwitchboardGraphRunner.xcscheme
ios/SwitchboardGraphRunner.xcworkspace/: contents.xcworkspacedata
shared/: NativeSwitchboardModule.cpp  NativeSwitchboardModule.h
specs/: NativeSwitchboardModule.ts
src/: AudioEngine.ts  Config.ts
src/components/: NodePanel.tsx  PropertyControl.tsx
src/services/: AudioEngine.ts  RPCClient.ts  SwitchboardClient.ts
src/switchboard-api/: RPCClient.ts  SwitchboardClient.ts
src/switchboard-rn/: NativeModuleRPCClient.ts
src/types/: SwitchboardTypes.ts
